--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,43 @@
 body {
+  color: #40514E;
   margin: 0;
   text-align: center;
   font-family: 'Merriweather', serif;
 }
 
 h1 {
-  margin-top: 0;
+  color: #66BFBF;
+  margin: 50px auto 0 auto;
   font-family: 'Sacramento', cursive;
-  font-size: xxx-large;
+  font-size: 5.625rem;
 }
 
 h2 {
+  color: #66BFBF;
+  font-weight: normal;
   font-family: 'Montserrat', sans-serif;
+  font-size: 2.5rem;
+  padding-bottom: 10px;
 }
 
 h3 {
+  color: #11999E;
   font-family: 'Montserrat', sans-serif;
+}
+
+p {
+  line-height: 2
+}
+
+hr {
+  border: dotted #c0c0c0 6px;
+  border-bottom: none;
+  width: 4%;
+  margin: 100px auto;
+}
+
+a {
+  margin: 10px 20px;
 }
 
 .span {
@@ -29,21 +51,90 @@ h3 {
 }
 
 .middle-container {
-    font-family: 'Montserrat', sans-serif;
-  }
+  margin: 100px 0;
+  font-family: 'Montserrat', sans-serif;
+}
 
 .bottom-container {
-    font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #E4F9F5;
+  padding: 50px 0 20px;
 }
 
 .top-cloud {
   position: absolute;
   right: 300px;
-  top: 50px;
+  top: 40px;
 }
 
 .bottom-cloud {
   position: absolute;
-  left: 300px;
+  left: 250px;
   bottom: 300px;
+}
+.intro {
+  width: 30%;
+  margin: auto;
+}
+.skill-title {
+  color: #66BFBF;
+  font-size: 1.5rem;
+  font-weight: normal;
+}
+
+.skill-row {
+  margin: 100px auto;
+  width: 50%;
+  text-align: left;
+}
+
+.skill-image {
+  width: 35%;
+  float: left;
+  margin-right: 30px;
+}
+
+.contact-message {
+  width: 40%;
+  margin: 40px auto 60px;
+}
+
+.button {
+  background: #11CDD4;
+  background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
+  background-image: -moz-linear-gradient(top, #11CDD4, #11999E);
+  background-image: -ms-linear-gradient(top, #11CDD4, #11999E);
+  background-image: -o-linear-gradient(top, #11CDD4, #11999E);
+  background-image: linear-gradient(to bottom, #11CDD4, #11999E);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: 'Montserrat', sans-serif;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.button:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc48d);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc48d);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc48d);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc48d);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc48d);
+  text-decoration: none;
+}
+
+.social-media {
+  width: 25px;
+}
+
+.social-media:hover {
+  width: 35px;
+}
+
+.copyright {
+  font-size: 0.75rem;
+  padding: 20px 0;
 }
